--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
+html, body {
+	height: 100%;
+	background-color: #142A48;
+	color: white;
+}
 .infocreation {
-	display: block;
 	width: 100%;
 	height: 100%;
 	vertical-align: middle;
