--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 html, body {
-	height: 100%;
-	background-color: #142A48;
+	background-color: 142A48;
 	color: white;
 }
-.infocreation {
-	width: 100%;
+body {
 	height: 100%;
-	vertical-align: middle;
+}
+.infocreation {
+	height: 100%;
 	text-align: center;
 }
