--- a/style.css
+++ b/style.css
@@ -3,8 +3,21 @@
 html, body {
 	background-color: rgba(20, 42, 72, 1);
 	color: white;
+	width: 100%;
+	height: 100%;
+}
+.boite {
+	height: 100%;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+  	align-items: center;
 }
 .infocreation {
+	background-color: rgb(13, 27, 46);
 	font-family: 'Share Tech', sans-serif;
 	text-align: center;
+	border: dashed yellow;
+	padding: 5%;
+	box-shadow: 10px 5px 5px black;
 }
