--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body {
 	width: 100%;
 	height: 100%;
 }
-.boite {
+.boitecentre {
 	height: 100%;
 	width: 100%;
 	display: flex;
@@ -20,4 +20,18 @@ html, body {
 	border: dashed yellow;
 	padding: 5%;
 	box-shadow: 10px 5px 5px black;
+}
+.toolbar {
+	width: 100%;
+	background-color: rgb(13, 27, 46);
+	font-family: 'Share Tech', sans-serif;
+	text-align: center;
+}
+.header {
+	position: fixed;
+	top: 0px;
+}
+.footer {
+	position: fixed;
+	bottom: 0px;
 }
