--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ html, body {
 	width: 100%;
 	height: 100%;
 }
+.bodycontainer {
+	width: 100%;
+	height: 100%;
+}
 .boitecentre {
 	height: 100%;
 	width: 100%;
