--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech&display=swap');
 
 html, body {
+	margin: 0;
 	background-color: rgba(20, 42, 72, 1);
 	color: white;
 	width: 100%;
@@ -28,7 +29,7 @@ html, body {
 }
 .toolbar {
 	width: 100%;
-	background-color: rgb(13, 27, 46);
+	background-color: black;
 	font-family: 'Share Tech', sans-serif;
 }
 .header {
