--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
 	width: 100%;
 	background-color: black;
 	font-family: 'Share Tech', sans-serif;
+	vertical-align: middle;
 }
 
 .header {
