--- a/style.css
+++ b/style.css
@@ -34,10 +34,10 @@ body {
 
 .toolbar {
 	width: 100%;
+	height: 5%;
 	background-color: black;
 	font-family: 'Share Tech', sans-serif;
-	vertical-align: middle;
-}
+	align-items: center;}
 
 .header {
 	position: fixed;
