--- a/style.css
+++ b/style.css
@@ -37,8 +37,7 @@ body {
 	height: 5%;
 	background-color: black;
 	font-family: 'Share Tech', sans-serif;
-	align-items: center;}
-
+}
 .header {
 	position: fixed;
 	top: 0px;
