--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 }
 
 .bodycontainer {
+	margin-top: 5%;
 	width: 100%;
 	height: 100%;
 	display: flex;
@@ -37,14 +38,13 @@ body {
 	height: 5%;
 	background-color: black;
 	font-family: 'Share Tech', sans-serif;
+	display: block;
 }
+
 .header {
 	position: fixed;
 	top: 0px;
 	border-bottom: dashed yellow;
-}
-.headercontainer {
-	display: block;
 }
 
 .footer {
@@ -52,7 +52,4 @@ body {
 	bottom: 0px;
 	text-align: center;
 	border-top: dashed yellow;
-}
-.footercontainer {
-	display: block;
 }
