--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
 	width: 100%;
 	height: 100%;
 }
+img {
+	width: auto;
+	height: auto;
+}
 
 .bodycontainer {
 	margin-top: 5%;
@@ -35,21 +39,24 @@ body {
 
 .toolbar {
 	width: 100%;
-	height: 5%;
 	background-color: black;
 	font-family: 'Share Tech', sans-serif;
-	display: block;
+	position: fixed;
+	display: inline-flex;
+	align-items: center;
 }
 
 .header {
-	position: fixed;
+	height: 10%;
 	top: 0px;
 	border-bottom: dashed yellow;
+	justify-content: space-around;
 }
 
 .footer {
-	position: fixed;
+	height: 5%;
 	bottom: 0px;
-	text-align: center;
 	border-top: dashed yellow;
+	justify-content: center;
+	text-align: center;
 }
