--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 	color: white;
 	width: 100%;
 	height: 100%;
+	--height5: 5%;
 }
 img {
 	width: auto;
@@ -14,7 +15,7 @@ img {
 }
 
 .bodycontainer {
-	margin-top: 5%;
+	margin-top: var(--height5);
 	width: 100%;
 	height: 100%;
 	display: flex;
@@ -47,7 +48,7 @@ img {
 }
 
 .header {
-	height: 10%;
+	height: var(--height5);
 	top: 0px;
 	border-bottom: dashed yellow;
 	justify-content: space-around;
