--- a/style.css
+++ b/style.css
@@ -1,25 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech&display=swap');
 
 :root {
-	--height10: 10%;
-
+	--height5: 5vh;
+	--height10: 10vh;
+	--colorblue: rgba(20, 42, 72, 1);
+	--colordarkblue: rgb(13, 27, 46);
+	--colorblack: black;
 }
 
 html,
 body {
 	margin: 0;
-	background-color: rgba(20, 42, 72, 1);
+	background-color: var(--colorblack);
 	color: white;
 	width: 100%;
 	height: 100%;
 }
 
-img {
-	width: auto;
-	height: auto;
-}
-
 .bodycontainer {
+	background-color: var(--colorblue);
 	margin-top: var(--height10);
 	width: 100%;
 	height: 100%;
@@ -35,7 +34,7 @@ img {
 }
 
 .infocreation {
-	background-color: rgb(13, 27, 46);
+	background-color: var(--colordarkblue);
 	font-family: 'Share Tech', sans-serif;
 	text-align: center;
 	border: dashed yellow;
@@ -59,8 +58,12 @@ img {
 	justify-content: space-around;
 }
 
+.header img {
+	align-self: start;
+}
+
 .footer {
-	height: 5%;
+	height: var(--height5);
 	bottom: 0px;
 	border-top: dashed yellow;
 	justify-content: center;
