--- a/style.css
+++ b/style.css
@@ -19,8 +19,7 @@ body {
 
 .bodycontainer {
 	background-color: var(--colorblue);
-	margin-top: var(--height10);
-	padding-top: 5vh;
+	padding-top: 15vh;
 	width: 100%;
 	height: 100%;
 	display: flex;
@@ -45,7 +44,7 @@ body {
 
 .toolbar {
 	width: 100%;
-	background-color: black;
+	background-color: var(--colordarkblue);
 	font-family: 'Share Tech', sans-serif;
 	position: fixed;
 	display: flex;
