--- a/style.css
+++ b/style.css
@@ -83,14 +83,19 @@ a {
 
 .bodycontent {
 	margin: var(--height20) 5vw var(--height5);
+	display: flex;
+	justify-items: center;
+	align-items: center;
 }
 
 .carre {
-	width: 44px;
-	height: 44px;
-	border: 1px;
-	justify-content: center;
+	min-block-size: 44px;
+	margin: 2vh;
+	padding: 2vh;
+	border: 1px solid whitesmoke;
+	border-radius: 10px;
 	text-align: center;
+	box-shadow: 5px 5px 5px whitesmoke;
 }
 
 .footer {
