--- a/style.css
+++ b/style.css
@@ -92,12 +92,12 @@ a {
 	background-color: var(--colordarkblue);
 	min-height: 44px;
 	min-width: 44px;
-	margin: 2vh;
-	padding: 2vh;
+	margin: 2vh 2vw;
+	padding: 2vh 2vw;
 	border: 1px solid whitesmoke;
 	border-radius: 10px;
 	text-align: center;
-	box-shadow: 5px 5px 5px whitesmoke;
+	box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.8);
 }
 
 .footer {
