--- a/style.css
+++ b/style.css
@@ -97,7 +97,9 @@ a {
 	border: 1px solid whitesmoke;
 	border-radius: 10px;
 	text-align: center;
-	box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.8);
+	box-shadow:
+		5px 5px 5px rgba(0, 0, 0, 0.8),
+		inset 2px 2px 2px rgba(245, 245, 245, 0.8);
 }
 
 .footer {
