--- a/style.css
+++ b/style.css
@@ -98,8 +98,8 @@ a {
 	border-radius: 10px;
 	text-align: center;
 	box-shadow:
-		5px 5px 5px rgba(0, 0, 0, 0.8),
-		inset 2px 2px 2px rgba(245, 245, 245, 0.8);
+		inset 2px 2px 2px rgba(245, 245, 245, 0.8),
+		5px 5px 5px rgba(0, 0, 0, 0.8);
 }
 
 .footer {
