--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ a {
 	border-radius: 10px;
 	text-align: center;
 	box-shadow:
-		inset 2px 2px 2px rgba(245, 245, 245, 0.2),
+		2px 2px 2px rgba(245, 245, 245, 0.2) inset,
 		5px 5px 5px rgba(0, 0, 0, 0.8);
 }
 
