--- a/style.css
+++ b/style.css
@@ -105,6 +105,11 @@ a {
 		2px 2px 10px rgba(0, 0, 0, 0.8);
 }
 
+.infos {
+	width: 100%;
+	height: auto;
+}
+
 .footer {
 	height: var(--height5);
 	bottom: 0px;
