--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ a {
 	margin-right: 5vw;
 	display: flex;
 	flex-direction: row;
+	flex-wrap: nowrap;
 	justify-content: center;
 	align-items: center;
 }
@@ -84,6 +85,14 @@ a {
 	display: flex;
 	justify-items: center;
 	align-items: center;
+}
+
+.boutons {
+	border: 1px solid whitesmoke;
+	padding: 2vh 2vw;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
 }
 
 .bouton {
