--- a/style.css
+++ b/style.css
@@ -29,8 +29,6 @@ a {
 	width: 100%;
 	height: 100%;
 	display: flex;
-	justify-content: center;
-	align-items: center;
 }
 
 .infocreation {
@@ -90,7 +88,6 @@ a {
 
 .bodycontent {
 	margin: var(--height20) 5vw var(--height5);
-	display: flex;
 }
 
 .boutons {
@@ -98,12 +95,11 @@ a {
 	border-radius: 10px;
 	padding: 2vh 2vw;
 	display: flex;
-	flex-flow: row wrap;
 }
 
 .bouton {
 	background-color: var(--colordarkblue);
-	flex: 100px;
+	min-width: 100px;
 	height: 100px;
 	margin: 2vh 2vw;
 	padding: 2vh 2vw;
