--- a/style.css
+++ b/style.css
@@ -95,6 +95,8 @@ a {
 	border-radius: 10px;
 	padding: 2vh 2vw;
 	display: flex;
+	align-items: center;
+	justify-content: space-around;
 }
 
 .bouton {
