--- a/style.css
+++ b/style.css
@@ -88,6 +88,9 @@ a {
 
 .bodycontent {
 	margin: var(--height20) 5vw var(--height5);
+	display: flex;
+	align-items: flex-start;
+	justify-content: space-around;
 }
 
 .boutons {
