--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ a {
 	justify-content: space-around;
 }
 
-.boutons {
+.category {
 	border: 1px solid whitesmoke;
 	border-radius: 10px;
 	padding: 2vh 2vw;
