--- a/style.css
+++ b/style.css
@@ -111,10 +111,11 @@ a {
 	padding: 2vh 2vw;
 	border: 1px solid whitesmoke;
 	border-radius: 10px;
-	text-align: center;
-	vertical-align: middle;
 	box-shadow:
 		2px 2px 5px rgba(245, 245, 245, 0.2) inset,
 		-2px -2px 5px rgba(0, 0, 0, 0.2) inset,
 		2px 2px 10px rgba(0, 0, 0, 0.8);
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
