--- a/style.css
+++ b/style.css
@@ -117,5 +117,5 @@ a {
 		2px 2px 10px rgba(0, 0, 0, 0.8);
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-around;
 }
