--- a/style.css
+++ b/style.css
@@ -89,8 +89,8 @@ a {
 .bodycontent {
 	margin: var(--height20) 5vw var(--height5);
 	display: flex;
-	align-items: start;
 	flex-flow: row wrap;
+	align-items: start;
 }
 
 .category {
@@ -99,6 +99,7 @@ a {
 	margin: 2vh 2vw;
 	padding: 2vh 2vw;
 	display: flex;
+	flex-flow: row wrap;
 	align-items: center;
 	justify-content: space-around;
 }
@@ -116,6 +117,7 @@ a {
 		-2px -2px 5px rgba(0, 0, 0, 0.2) inset,
 		2px 2px 10px rgba(0, 0, 0, 0.8);
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: space-around;
 }
