--- a/style.css
+++ b/style.css
@@ -87,7 +87,9 @@ a {
 }
 
 .bodycontent {
-	margin: var(--height20) 5vw var(--height5);
+	padding: var(--height20) 5vw var(--height5);
+	width: 100%;
+	height: 100%;
 	display: flex;
 	flex-flow: row wrap;
 	align-items: start;
