--- a/style.css
+++ b/style.css
@@ -59,7 +59,6 @@ a {
 	bottom: 0px;
 	border-top: dashed yellow;
 	justify-content: center;
-	text-align: center;
 }
 
 .header .logo {
@@ -79,6 +78,7 @@ a {
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: center;
+	align-content: center;
 	align-items: center;
 }
 
@@ -92,8 +92,8 @@ a {
 	width: 100%;
 	display: flex;
 	flex-flow: row wrap;
-	align-items: start;
 	justify-content: space-around;
+	align-content: space-around;
 }
 
 .category {
@@ -103,8 +103,8 @@ a {
 	padding: 2vh 2vw;
 	display: flex;
 	flex-flow: row wrap;
-	align-items: center;
 	justify-content: space-around;
+	align-content: space-around;
 }
 
 .bouton {
@@ -121,6 +121,6 @@ a {
 		2px 2px 10px rgba(0, 0, 0, 0.8);
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 	justify-content: space-around;
+	align-content: space-around;
 }
