--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ a {
 	width: 100%;
 	height: 100%;
 	display: flex;
+	justify-content: center;
 }
 
 .infocreation {
@@ -123,4 +124,5 @@ a {
 	flex-direction: column;
 	justify-content: space-around;
 	align-content: space-around;
+	text-align: center;
 }
