--- a/style.css
+++ b/style.css
@@ -35,8 +35,9 @@ a {
 	background-color: var(--colordarkblue);
 	text-align: center;
 	border: dashed yellow;
+	border-radius: 10px;
 	padding: 5%;
-	box-shadow: 10px 5px 5px black;
+	box-shadow: 5px 5px 10px whitesmoke;
 	align-self: center;
 	justify-self: center;
 }
