--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
 	--colorblue: rgba(20, 42, 72, 1);
 	--colordarkblue: rgb(13, 27, 46);
 	--colorblack: black;
+	--transpablanc02: rgba(245, 245, 245, 0.2);
+	--transpanoir02: rgba(0, 0, 0, 0.2);
+	--transpanoir08: rgba(0, 0, 0, 0.8);
 }
 
 html,
@@ -37,7 +40,7 @@ a {
 	border: dashed yellow;
 	border-radius: 10px;
 	padding: 5%;
-	box-shadow: 5px 5px 10px whitesmoke;
+	box-shadow: 5px 5px 10px var(--transpablanc02);
 	align-self: center;
 	justify-self: center;
 }
@@ -117,9 +120,9 @@ a {
 	border: 1px solid whitesmoke;
 	border-radius: 10px;
 	box-shadow:
-		2px 2px 5px rgba(245, 245, 245, 0.2) inset,
-		-2px -2px 5px rgba(0, 0, 0, 0.2) inset,
-		2px 2px 10px rgba(0, 0, 0, 0.8);
+		2px 2px 5px var(--transpablanc02) inset,
+		-2px -2px 5px var(--transpanoir02) inset,
+		2px 2px 10px var(--transpanoir08);
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
