--- a/style.css
+++ b/style.css
@@ -145,6 +145,10 @@ a {
 
 }
 
+.tableaucachet thead tr {
+	background-color: var(--colordarkblue);
+}
+
 .tableaucachet th, .tableaucachet td {
 	padding: 10px;
 }
