--- a/style.css
+++ b/style.css
@@ -130,6 +130,13 @@ a {
 	text-align: center;
 }
 
+.categoryajout {
+	border-radius: 10px;
+	margin: 2vh 2vw;
+	padding: 2vh 2vw;
+	display: inline-block;
+}
+
 .categorytableau {
 	border-radius: 10px;
 	margin: 2vh 2vw;
