--- a/style.css
+++ b/style.css
@@ -134,7 +134,11 @@ a {
 	border-radius: 10px;
 	margin: 2vh 2vw;
 	padding: 2vh 2vw;
+}
+
+.categoryajout div {
 	display: inline-block;
+	margin: 0px 10px;
 }
 
 .categorytableau {
@@ -155,7 +159,8 @@ a {
 	background-color: var(--colordarkblue);
 }
 
-.tableaucachet th, .tableaucachet td {
+.tableaucachet th,
+.tableaucachet td {
 	padding: 10px;
 	border: 1px solid whitesmoke;
 }
