--- a/style.css
+++ b/style.css
@@ -158,5 +158,5 @@ a {
 .tableaucachet th,
 .tableaucachet td {
 	padding: 10px;
-	border: 1px solid whitesmoke;
+	border: 1px solid var(--colorblack);
 }
