--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/* 
+BK-Coding.net
+file: style.css
+author: Bastien Kilian
+*/
+
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech&display=swap');
 
 :root {
