--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ file: style.css
 author: Bastien Kilian
 */
 
-@import url('https://fonts.googleapis.com/css2?family=Share+Tech&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Share+Tech&display=swap");
 
 :root {
 	--height5: 5vh;
@@ -22,7 +22,7 @@ html,
 body {
 	margin: 0;
 	background-color: var(--colorblue);
-	font-family: 'Share Tech', sans-serif;
+	font-family: "Share Tech", sans-serif;
 	color: white;
 	width: 100%;
 	height: 100%;
@@ -107,6 +107,9 @@ a {
 	border-radius: 10px;
 	margin: 2vh 2vw;
 	padding: 2vh 2vw;
+	box-shadow: 2px 2px 5px var(--transpablanc02) inset,
+		-2px -2px 5px var(--transpanoir02) inset,
+		2px 2px 10px var(--transpanoir08);
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: space-around;
@@ -121,8 +124,7 @@ a {
 	padding: 2vh 2vw;
 	border: 1px solid whitesmoke;
 	border-radius: 10px;
-	box-shadow:
-		2px 2px 5px var(--transpablanc02) inset,
+	box-shadow: 2px 2px 5px var(--transpablanc02) inset,
 		-2px -2px 5px var(--transpanoir02) inset,
 		2px 2px 10px var(--transpanoir08);
 	display: flex;
