--- a/style.css
+++ b/style.css
@@ -168,3 +168,8 @@ a {
 	padding: 10px;
 	border: 1px solid var(--colorblack);
 }
+.active {
+	background-color: #007BFF;
+	color: white;
+	border: 2px solid #0056b3;
+}
