--- a/style.css
+++ b/style.css
@@ -168,6 +168,9 @@ a {
 	padding: 10px;
 	border: 1px solid var(--colorblack);
 }
+#paramtoolbar {
+	display: inline-block;
+}
 .active {
 	background-color: #007BFF;
 	color: white;
