--- a/style.css
+++ b/style.css
@@ -169,7 +169,9 @@ a {
 	border: 1px solid var(--colorblack);
 }
 #paramtoolbar {
-	display: inline-block;
+	display: inline-flex;
+	justify-content: center;
+
 }
 .active {
 	background-color: #007BFF;
