--- a/style.css
+++ b/style.css
@@ -145,7 +145,16 @@ a {
 	display: inline-block;
 	margin: 5px 10px;
 }
-
+.categorytoolbar {
+	background-color: var(--colorblack);
+	border-radius: 10px;
+	margin: 2vh 2vw;
+	padding: 2vh 2vw;
+}
+.categorytoolbar div {
+	display:block;
+	text-align:center;
+}
 .categorytableau {
 	border-radius: 10px;
 	margin: 2vh 2vw;
@@ -169,7 +178,7 @@ a {
 	border: 1px solid var(--colorblack);
 }
 .active {
-	background-color: #007BFF;
+	background-color: #007bff;
 	color: white;
 	border: 2px solid #0056b3;
 }
