--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ a {
 .toolbarbtn {
 	padding: 2vh 2vw;
 	font-weight: bold;
-	display: flex;
+	display: inline-flex;
 	justify-content: center;
 	align-content: center;
 }
