--- a/style.css
+++ b/style.css
@@ -115,6 +115,16 @@ a {
 	justify-content: space-around;
 	align-content: space-around;
 }
+.chat-box {
+	width: 80%;
+	height: 400px;
+	border: 1px solid #ccc;
+	padding: 10px;
+	overflow-y: scroll;
+}
+.message {
+	margin-bottom: 10px;
+}
 
 .bouton {
 	background-color: var(--colordarkblue);
