--- a/style.css
+++ b/style.css
@@ -115,6 +115,18 @@ a {
 	justify-content: space-around;
 	align-content: space-around;
 }
+.categorychat {
+	border-radius: 10px;
+	margin: 2vh 2vw;
+	padding: 2vh 2vw;
+	box-shadow: 2px 2px 5px var(--transpablanc02) inset,
+		-2px -2px 5px var(--transpanoir02) inset,
+		2px 2px 10px var(--transpanoir08);
+	display: flex;
+	flex-flow: column wrap;
+	justify-content: space-around;
+	align-content: space-around;
+}
 .chat-box {
 	width: 80%;
 	height: 150px;
