--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ a {
 		2px 2px 10px var(--transpanoir08);
 	display: flex;
 	flex-flow: column wrap;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
 }
 .chat-box {
