--- a/style.css
+++ b/style.css
@@ -146,11 +146,11 @@ a {
 	width: 50%;
 }
 
-.message {
+.messagechat {
 	margin-bottom: 10px;
 }
 
-.message em {
+.messagechat em {
 	font-size: small;
 	color: aqua;
 }
