--- a/style.css
+++ b/style.css
@@ -140,10 +140,6 @@ a {
 	overflow-x: auto;
 }
 
-#message {
-	width: auto;
-}
-
 .messagechat {
 	margin-bottom: 10px;
 }
@@ -151,6 +147,12 @@ a {
 .messagechat em {
 	font-size: small;
 	color: aqua;
+}
+#chat-form {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .bouton {
