--- a/style.css
+++ b/style.css
@@ -149,10 +149,7 @@ a {
 	color: aqua;
 }
 #chat-form {
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: space-between;
-	align-items: center;
+	justify-items: auto;
 }
 
 .bouton {
