--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ a {
 	display: flex;
 	flex-flow: column wrap;
 	justify-content: space-between;
-	align-items: center;
+	align-items: space-around;
 }
 
 .chat-box {
