--- a/style.css
+++ b/style.css
@@ -125,7 +125,6 @@ a {
 		2px 2px 10px var(--transpanoir08);
 	display: flex;
 	flex-flow: column wrap;
-	justify-content: space-between;
 	align-items: space-around;
 }
 
@@ -136,6 +135,7 @@ a {
 	border: 1px solid #ccc;
 	border-radius: 10px;
 	padding: 10px;
+	margin: 10px;
 	overflow-y: auto;
 	overflow-x: auto;
 }
