--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ a {
 		2px 2px 10px var(--transpanoir08);
 	display: flex;
 	flex-flow: column wrap;
+	justify-content: center;
 	align-items: space-around;
 }
 
