--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ a {
 #chat-form {
 	width: 100%;
 	display: flex;
-	flex-flow: row wrap;
+	flex-flow: column wrap;
 	justify-content: center;
 }
 
