--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ a {
 	align-items: center;
 }
 
-.categorychat::content {
+.categorychat div {
 	margin: 10px;
 }
 
@@ -140,7 +140,6 @@ a {
 	border: 1px solid #ccc;
 	border-radius: 10px;
 	padding: 10px;
-	margin: 10px;
 	overflow-y: auto;
 	overflow-x: auto;
 }
@@ -160,6 +159,10 @@ a {
 	flex-flow: column wrap;
 	justify-content: center;
 	align-items: center;
+}
+
+#chat-form button {
+	margin: 10px;
 }
 
 .bouton {
