update dashboard.php and style.css

--- a/style.css
+++ b/style.css
@@ -33,6 +33,18 @@ a {
 	color: white;
 }
 
+.pad10 {
+	padding: 10px;
+}
+
+.mar10 {
+	margin: 10px;
+}
+
+.wid100 {
+	width: 100%;
+}
+
 .bodycontainer {
 	width: 100%;
 	height: 100%;
@@ -155,10 +167,6 @@ a {
 	flex-flow: column wrap;
 	justify-content: center;
 	align-items: center;
-}
-
-#message {
-	padding: 10px;
 }
 
 .bouton {
