update dashboard.php, load_messages.php and style.css

--- a/style.css
+++ b/style.css
@@ -155,6 +155,8 @@ a {
 	padding: 10px;
 	overflow-y: auto;
 	overflow-x: auto;
+	display: flex;
+	flex-direction: column-reverse;
 }
 
 .messagechat {
