--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ a {
 .infocreation {
 	background-color: var(--colordarkblue);
 	text-align: center;
-	border: dashed yellow;
+	border: dashed orange;
 	border-radius: 10px;
 	padding: 5%;
 	box-shadow: 5px 5px 10px var(--transpablanc02);
