--- a/style.css
+++ b/style.css
@@ -68,6 +68,11 @@ a {
 	justify-self: center;
 }
 
+.infocreation img {
+	width: var(--height20);
+	border-radius: 50%;
+}
+
 .toolbar {
 	width: 100%;
 	background-color: var(--colordarkblue);
