--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ a {
 .tableaucachet th,
 .tableaucachet td {
 	padding: 8px;
-	text-align: left;
+	text-align: center;
 	border: 1px solid #ddd;
 }
 
