--- a/style.css
+++ b/style.css
@@ -220,8 +220,10 @@ a {
 }
 
 .categorytoolbar {
-	background-color: var(--colorblack);
+	background-color: var(--colordarkblue);
 	border-radius: 10px;
+	margin: 2vh 2vw;
+	padding: 2vh 2vw;
 	align-content: center;
 }
 
